# rag-citations

./: DECISIONS.md  README.md  app.py  pyproject.toml  requirements.txt
src/ragv/: __init__.py  _text.py  cli.py  config.py  models.py  pipeline.py
src/ragv/generate/: __init__.py  generator.py  prompt.py  provider.py
src/ragv/ingest/: __init__.py  chunker.py  embedder.py  loader.py
src/ragv/retrieve/: __init__.py  dense.py  fusion.py  retriever.py  sparse.py
src/ragv/store/: __init__.py  base.py  chroma.py  memory.py
src/ragv/verify/: __init__.py  citation_verifier.py
tests/: test_cli.py  test_generate.py  test_ingest.py  test_pipeline.py  test_retrieval.py  test_verify.py
