[project]
name = "ragv"
version = "0.1.0"
description = "RAG with hybrid (dense+BM25) retrieval and verified citations — no hallucinated citations ship."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13",
    "loguru>=0.7",
    "pyyaml>=6",
    "numpy>=1.26",
    "rank-bm25>=0.2",
    "pypdf>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=5", "ruff>=0.6"]
demo = ["gradio>=4", "sentence-transformers>=3"]
embeddings = ["sentence-transformers>=3"]
chroma = ["chromadb>=0.5"]

[project.scripts]
ragv = "ragv.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/ragv"]
omit = ["src/ragv/store/chroma.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
